tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_cannot_call_unconstrained_function_outside_of_unsafe/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Call to unconstrained function is unsafe and must be in an unconstrained function or unsafe block
  ┌─ src/main.nr:3:9
  │
3 │         foo();
  │         -----
  │

Aborting due to 1 previous error
